se agrego mensaje terminos

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Gerardo Lucero <34350583+gerardolucero1@users.noreply.github.com>",
   "license": "MIT",
   "nativescript": {
-    "id": "com.partnergrammer.prevenapp",
+    "id": "com.partnergrammer.prevenapp2",
     "templateVersion": "v2",
     "tns-android": {
       "version": "6.5.0"
