--- a/app/App_Resources/iOS/PrevenAppiOS.entitlements
+++ b/app/App_Resources/iOS/PrevenAppiOS.entitlements
@@ -4,12 +4,12 @@
 <dict>
     <key>com.apple.security.application-groups</key>
     <array>
-        <string>group.com.partnergrammer.prevenapp</string>
+        <string>group.com.partnergrammer.prevenapp2</string>
     </array>
     <key>keychain-access-groups</key>
     <array>
-        <string>$(AppIdentifierPrefix)group.com.partnergrammer.prevenapp</string>
-        <string>$(AppIdentifierPrefix)com.partnergrammer.prevenapp</string>
+        <string>$(AppIdentifierPrefix)group.com.partnergrammer.prevenapp2</string>
+        <string>$(AppIdentifierPrefix)com.partnergrammer.prevenapp2</string>
     </array>
     <key>com.apple.developer.applesignin</key>
     <array>
