--- a/app/App_Resources/iOS/build.xcconfig
+++ b/app/App_Resources/iOS/build.xcconfig
@@ -1,9 +1,9 @@
 // You can add custom settings here
 // for example you can uncomment the following line to force distribution code signing
-CODE_SIGN_IDENTITY = Samuel Eduardo Acosta Rivera 
+CODE_SIGN_IDENTITY = Municipio de Chihuahua 
 // To build for device with Xcode 8 you need to specify your development team. More info: https://developer.apple.com/library/prerelease/content/releasenotes/DeveloperTools/RN-Xcode/Introduction.html
-DEVELOPMENT_TEAM = Samuel Eduardo Acosta Rivera;
+DEVELOPMENT_TEAM = Municipio de Chihuahua;
 ASSETCATALOG_COMPILER_APPICON_NAME = AppIcon;
 ASSETCATALOG_COMPILER_LAUNCHIMAGE_NAME = LaunchImage;
 
-CODE_SIGN_ENTITLEMENTS = covid/covid.entitlements
+CODE_SIGN_ENTITLEMENTS = PrevenAppiOS/PrevenAppiOS.entitlements
